# Project_RobotEngineering_3

./: READ.md  README.md  docker-compose.yaml
Voice_Control/: app.py
my_robot/install/: local_setup.sh  setup.sh
my_robot/install/my_command_pkg/share/my_command_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_robot/install/my_custom_srv_pkg/share/my_custom_srv_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_robot/install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  realsense_node_factory.h  ros_param_backend.h  t265_realsense_node.h
my_robot/log/: latest_build
my_robot/src/my_custom_srv_pkg/: CMakeLists.txt  package.xml
my_robot/src/my_custom_srv_pkg/srv/: DivideIntegers.srv
my_robot/src/my_robot_pkg/: CMakeLists.txt  setup.cfg  setup.py
my_robot/src/my_robot_pkg/launch/: rtabmap_realsense.launch.py
my_robot/src/my_robot_pkg/my_robot_pkg/: robot_client.py
my_robot/src/py_custom_srv_pkg/: CMakeLists.txt  setup.py
my_robot/src/py_custom_srv_pkg/py_custom_srv_pkg/: py_custom_server.py
test/: realsense_depth.py  rtabmap_test.launch.py
test/install/: local_setup.sh  setup.sh
test/install/librealsense2/lib/: librealsense2-gl.so.2.56.5
test/log/: latest_build
test/src/d435i_slam/: package.xml  setup.cfg  setup.py
voice-controller/: Dockerfile  app.py  commands.json  requirements.txt
voice_Control/: Dockerfile  app.py  requirements.txt
(+297 files in other folders)
