<?xml version="1.0"?>
<package format="3">
  <name>d435i_slam</name>
  <version>0.0.0</version>
  <description>SLAM with RealSense D435i and RTAB-Map</description>

  <maintainer email="your@email.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
